--- a/src/i18n/en/en.json
+++ b/src/i18n/en/en.json
@@ -1,3 +1,6 @@
 {
-  "jobTitle": "Fullstack developer"
+  "jobTitle": "Fullstack developer",
+  "language": "Language",
+  "french": "French",
+  "english": "English"
 }
