--- a/src/i18n/fr/fr.json
+++ b/src/i18n/fr/fr.json
@@ -1,3 +1,6 @@
 {
-  "jobTitle": "Développeur fullstack"
+  "jobTitle": "Développeur fullstack",
+  "language": "Langue",
+  "french": "Français",
+  "english": "Anglais"
 }
