Add github links + theming

--- a/src/i18n/fr/fr.json
+++ b/src/i18n/fr/fr.json
@@ -12,5 +12,6 @@
     "name": "Démo three.js"
   },
   "myProjects": "My projects",
-  "visit": "Visit"
+  "visit": "Visiter",
+  "underConstruction": "En construction"
 }
