--- a/src/i18n/en/en.json
+++ b/src/i18n/en/en.json
@@ -12,5 +12,6 @@
     "name": "Three.js demo"
   },
   "myProjects": "Mes projets",
-  "visit": "Visiter"
+  "visit": "Visit",
+  "underConstruction": "Under construction"
 }
