--- a/src/i18n/en/en.json
+++ b/src/i18n/en/en.json
@@ -15,5 +15,12 @@
   "visit": "Visit",
   "underConstruction": "Under construction",
   "myExperience": "My experience",
-  "contactMe": "Contact me"
+  "contactMe": "Contact me",
+  "byMail": "By email",
+  "mySocials": "My socials",
+  "message": "Message",
+  "object": "Object",
+  "yourMail": "Your mail",
+  "name": "Your name",
+  "send": "Send"
 }
